<resources>
    <string name="app_name">CollegeManagementApp</string>

    <string name="admin">ADMIN</string>
    <string name="student">STUDENT</string>

    <string name="mobile_number">Enter MobileNumber</string>
    <string name="password">Enter UserPassword</string>
    <string name="login">LOGIN</string>
    <string name="cancel">CANCEL</string>
    <string name="register">REGISTER</string>
    <string name="username">Enter UserName</string>
    <string name="user_password">Enter UserPassword</string>
    <string name="user_confirm_password">Enter UserConfirmPassword</string>
    <string name="user_dob">Enter UserDOB</string>
    <string name="user_age">Enter UserAge</string>
    <string name="gender">Gender</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="others">OTHERS</string>
    <string name="terms_conditions">Accept Terms &amp; Conditions</string>

    <string-array name="courses">

        <item>Select Course</item>
        <item>CSE</item>
        <item>ECE</item>
        <item>EEE</item>
        <item>IT</item>
        <item>AI</item>

    </string-array>
</resources>