<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="@color/white"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_25"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_25"
        android:background="@drawable/edit_border"
        android:digits="0123456789"
        android:hint="@string/mobile_number"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:inputType="phone"
        android:padding="@dimen/padding_12" />

    <EditText
        android:id="@+id/etUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_25"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_25"
        android:background="@drawable/edit_border"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/padding_12"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_25"
        android:layout_marginTop="@dimen/margin_25"
        android:layout_marginRight="@dimen/margin_25"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/btn_border"
            android:gravity="center"
            android:padding="@dimen/padding_12"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_22"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.01" />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/btn_border"
            android:gravity="center"
            android:padding="@dimen/padding_12"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_22"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_25"
        android:background="@drawable/btn_border"
        android:gravity="center"
        android:padding="@dimen/padding_12"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_22"
        android:textStyle="bold" />

</LinearLayout>