<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:orientation="vertical">


    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_25"
        android:layout_marginRight="@dimen/margin_25"
        android:background="@drawable/edit_border"
        android:digits="0123456789"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:padding="@dimen/padding_12"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_25"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_25"
        android:background="@drawable/edit_border"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="@dimen/padding_12"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />


    <EditText

        android:id="@+id/etUserPassword"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_25"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_25"
        android:background="@drawable/edit_border"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        android:padding="@dimen/padding_12"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />


    <EditText
        android:id="@+id/etUserCPassword"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_25"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_25"
        android:background="@drawable/edit_border"
        android:hint="@string/user_confirm_password"
        android:inputType="textPassword"
        android:padding="@dimen/padding_12"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_25"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_25"
        android:background="@drawable/edit_border"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:padding="@dimen/padding_12"
            android:text="@string/gender"
            android:textColor="@color/black" />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.8"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/male"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/rbFeMale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/female"
                android:textColor="@color/black" />


            <RadioButton
                android:id="@+id/rbOthers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/others"
                android:textColor="@color/black" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_25"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_25"
        android:background="@drawable/edit_border"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etDOB"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_weight="0.85"
            android:background="@null"
            android:hint="@string/user_dob"
            android:padding="@dimen/padding_12"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.004"
            android:background="@color/design_default_color_error" />

        <ImageView
            android:id="@+id/ivCalendar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_weight="0.15"
            android:src="@android:drawable/ic_menu_my_calendar" />

    </LinearLayout>

    <Spinner
        android:id="@+id/spCourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_25"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_25"
        android:background="@drawable/edit_border"
        android:entries="@array/courses"
        android:outlineSpotShadowColor="@color/black"
        android:padding="@dimen/padding_12"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/etUserAge"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_25"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_25"
        android:background="@drawable/edit_border"
        android:digits="0123456789"
        android:hint="Enter UserAge"
        android:inputType="number"
        android:maxLength="2"
        android:padding="@dimen/padding_12"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <CheckBox
        android:id="@+id/cbAcceptTerms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_25"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_25"
        android:paddingLeft="@dimen/padding_12"
        android:text="@string/terms_conditions"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_25"
        android:layout_marginTop="@dimen/margin_25"
        android:layout_marginRight="@dimen/margin_25"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/btn_border"
            android:gravity="center"
            android:padding="@dimen/padding_12"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textColorHint="@color/black"
            android:textSize="@dimen/text_size_22"
            android:textStyle="bold"
            android:enabled="false"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.01" />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/btn_border"
            android:gravity="center"
            android:padding="@dimen/padding_12"
            android:text="CANCEL"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_22"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>